# cicflow

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cicflow/base/: CMakeLists.txt  attributes.h  call_once.h  config.h  dynamic_annotations.h  log_severity.c  log_severity.h  macros.h  optimization.h  options.h  policy_checks.h  port.h  prefetch.h  thread_annotations.h
cicflow/base/internal/: atomic_hook.h  cycleclock.c  cycleclock.h  cycleclock_config.h  direct_mmap.h  dynamic_annotations.h  endian.h  errno_saver.h  hide_ptr.h  low_level_alloc.c  low_level_alloc.h  low_level_scheduling.h  per_thread_tls.h  prefetch.h  pretty_function.h  raw_logging.c  raw_logging.h  scheduling_mode.h  spinlock.c  spinlock.h  spinlock_linux.inc  spinlock_posix.inc  spinlock_wait.c  spinlock_wait.h  strerror.c  strerror.h  sysinfo.c  sysinfo.h  thread_annotations.h  thread_identity.c  thread_identity.h  tsan_mutex_interface.h  unaligned_access.h  unscaledcycleclock.c  unscaledcycleclock.h  unscaledcycleclock_config.h
cicflow/copts/: copts.py
cmake/: Helpers.cmake
cmake/unity/: CMakeLists.txt.in  download.cmake
test/base/: CMakeLists.txt  config_test.c  log_severity_test.c  optimization_test.c  prefetch_test.c  raw_logging_test.c
test/base/internal/: endian_test.c  prefetch_test.c  strerror_test.c
